Fiz algumas alteracões finais da classe Jornais/Revistas